--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+/* -- общие стили -- */
+
 *, *:after, *:before {
   box-sizing: border-box;
   margin: 0;
@@ -51,4 +53,106 @@ footer:after,
   width: 100%;
   max-width: 960px;
   padding: 0 15px;
+}
+
+/* -- стили для шапки -- */
+
+header {
+  width: 100%;
+  background: white;
+  box-shadow: 3px 3px 1px rgba(0, 0, 0, .05);
+  padding: 15px 0;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+/* логотип */
+.logo {
+  display: block;
+  float: left;
+}
+
+.logo span {
+  color: white;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 50%;
+  margin: 5px 0;
+  text-align: center;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, .4);
+}
+
+.logo span:nth-child(odd) {
+  background: #EF5A42;
+}
+
+.logo span:nth-child(even) {
+  background: #F8B763;
+}
+
+/* меню */
+#menu {
+  float: right; /* расположили весь блок справа*/
+}
+
+#menu li {
+  display: inline-block; /* распределили элементы по всему блоку */
+  margin-right: 30px;
+}
+
+#menu a {
+  color: #111;
+  font-weight: 600;
+  text-transform: uppercase; /* все буквы заглавные */
+  letter-spacing: 1px; /* расстояние между буквами */
+  display: block;
+  line-height: 40px;
+}
+
+#menu a:hover {
+  color: #EF5A42;
+}
+
+#menu li:last-child {
+  margin-right: 0;
+}
+
+/* форма поиска */
+#searchform {
+  float: right;
+  margin-left: 46px;
+  /*display: inline-block;*/
+  position: relative;
+}
+
+#searchform input {
+  width: 170px;
+  height: 40px;
+  float: left;
+  color: #9E9C9C;
+  font-style: italic;
+
+  padding-left: 10px;
+  overflow: hidden;
+  outline: none;
+  border: none;
+}
+
+#searchform button {
+  color: #EF5A42;
+  font-size: 18px;
+  height: 40px;
+  background: transparent; 
+
+  position: absolute;
+  right: 10px;
+  
+  cursor: pointer;
+  border: none;
+}
+
+#searchform input:focus {
+  outline: 2px solid #EBEBE3;
 }
